--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-essentials": "^7.1.0-rc.2",
-    "@storybook/addon-interactions": "^7.1.0-rc.2",
-    "@storybook/addon-links": "^7.1.0-rc.2",
+    "@storybook/addon-essentials": "^7.1.0",
+    "@storybook/addon-interactions": "^7.1.0",
+    "@storybook/addon-links": "^7.1.0",
     "@storybook/addon-onboarding": "^1.0.7",
-    "@storybook/blocks": "^7.1.0-rc.2",
-    "@storybook/react": "^7.1.0-rc.2",
-    "@storybook/react-vite": "^7.1.0-rc.2",
+    "@storybook/blocks": "^7.1.0",
+    "@storybook/react": "^7.1.0",
+    "@storybook/react-vite": "^7.1.0",
     "@storybook/testing-library": "^0.2.0",
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
@@ -34,7 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.1",
     "eslint-plugin-storybook": "^0.6.12",
-    "storybook": "^7.1.0-rc.2",
+    "storybook": "^7.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.0"
   },
